# tp

./: README.md  run.sh
docker_task/: docker-compose.yml
docker_task/client/: client.py
docker_task/server/: index.html  server.py
kuber_task/: Deployment.yaml  Deployment2.yaml  LoadBalancer.yaml  LoadBalancer2.yaml
task2/: CMakeLists.txt
task2/A/: index.h  preparing.py
task2/B/: CMakeLists.txt  lib.cpp  lib.h
task2/C/: CMakeLists.txt  main.cpp  main.h  unit_test.cpp
